fixed code wrapping in FF

--- a/css/rainbow/github.css
+++ b/css/rainbow/github.css
@@ -7,6 +7,7 @@
 pre {
     border: 1px solid #ccc;
     word-wrap: break-word;
+	white-space: pre-wrap;
     padding: 6px 10px;
     line-height: 19px;
     margin-bottom: 20px;
